feat: update methods for association between student and class